# emx-testspec

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: commands.rs  conditions.rs  engine.rs  error.rs  lib.rs  parser.rs  runner.rs  state.rs
src/commands/: cmp.rs  env.rs  exec.rs  file_ops.rs  flow.rs  help.rs  mod.rs  output.rs  text.rs
tests/: background-test.txtar  integration.rs  test-continuation.txtar
tests/testscript/: heredoc-basic.txtar  heredoc-cmpenv.txtar  heredoc-fail-diff.txtar  heredoc-file-compare.txtar  heredoc-special-chars.txtar
